--- a/src/index.css
+++ b/src/index.css
@@ -22,15 +22,16 @@ html {
   margin: 0;
 }
 
-/* ::-webkit-scrollbar {
-  width: 6px;
+::-webkit-scrollbar {
+  width: 4px;
 }
 
 ::-webkit-scrollbar-track{
-  background-color: #131316;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb{
-  background-color: #4ae290;
-  border-radius: 5px;
-} */
+  /* background-color: #3B82F6; */
+  background-color: #007CC0;
+  border-radius: 50px;
+}
